--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^17.0.1",
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
+    "firebase-admin": "^13.4.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
